# api-spec/openapi.yaml
@@ -43,7 +43,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ChatMessage'
+              $ref: '#/components/schemas/SubmitChatMessageRequest'
       responses:
         '200':
           description: Chat message response
@@ -115,6 +115,22 @@ components:
           enum:
             - user
             - ai
+    SubmitChatMessageRequest:
+      type: object
+      required:
+        - content
+        - model
+      properties:
+        content:
+          type: string
+        model:
+          type: string
+          description: The model to use for the chat message
+          enum:
+            - gpt-4o-mini
+            - gpt-4o
+            - claude-3-7-sonnet-20250219
+            - claude-3-5-sonnet-20241022
     Error:
       type: object
       required:
