# chat-server/src/chat_server/generated/main.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-03-16T19:45:15+00:00
+#   timestamp: 2025-03-20T13:26:02+00:00
 
 from __future__ import annotations
 
@@ -8,7 +8,7 @@ from typing import List, Union
 
 from fastapi import FastAPI
 
-from .models import ChatMessage, Error, Thread
+from .models import ChatMessage, Error, SubmitChatMessageRequest, Thread
 
 app = FastAPI(
     title='Simple Chat API',
@@ -55,7 +55,7 @@ def get_chat_messages(thread_id: str) -> List[ChatMessage]:
     tags=['Chat'],
 )
 def submit_chat_message(
-    thread_id: str, body: ChatMessage = ...
+    thread_id: str, body: SubmitChatMessageRequest = ...
 ) -> Union[ChatMessage, Error]:
     """
     Submit a chat message and get a response
