# chat-server/src/chat_server/generated/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  /Users/chrissreesangkom/ai-chat/api-spec/openapi.yaml
-#   timestamp: 2025-03-16T19:45:15+00:00
+#   timestamp: 2025-03-20T13:26:02+00:00
 
 from __future__ import annotations
 
@@ -25,6 +25,18 @@ class Role(Enum):
 class ChatMessage(BaseModel):
     content: str = Field(..., description='The text content of the message')
     role: Optional[Role] = Field(None, description='The role of the message sender')
+
+
+class Model(Enum):
+    gpt_4o_mini = 'gpt-4o-mini'
+    gpt_4o = 'gpt-4o'
+    claude_3_7_sonnet_20250219 = 'claude-3-7-sonnet-20250219'
+    claude_3_5_sonnet_20241022 = 'claude-3-5-sonnet-20241022'
+
+
+class SubmitChatMessageRequest(BaseModel):
+    content: str
+    model: Model = Field(..., description='The model to use for the chat message')
 
 
 class Error(BaseModel):
